Update more opinionated dependencies: asset-pipeline, joda-time, build-test-data, grails-melody. DB: postgreSQL/mySQL for non-dev